--- a/RNS-CKKS-Enc-Dec.runs/impl_1/.vivado.begin.rst
+++ b/RNS-CKKS-Enc-Dec.runs/impl_1/.vivado.begin.rst
@@ -3,3 +3,13 @@
     <Process Command="vivado" Owner="moginh" Host="dis-lab-SYS-7049GP-TRT" Pid="1215943" HostCore="32" HostMemory="131638120">
     </Process>
 </ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado" Owner="moginh" Host="dis-lab-SYS-7049GP-TRT" Pid="1237489" HostCore="32" HostMemory="131638120">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado" Owner="moginh" Host="dis-lab-SYS-7049GP-TRT" Pid="1241506" HostCore="32" HostMemory="131638120">
+    </Process>
+</ProcessHandle>
